plugins {
    id 'java'
    id 'application'
}

application {
    mainClass = 'com.matterworks.core.Main'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.zaxxer:HikariCP:5.1.0'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.slf4j:slf4j-simple:2.0.12'

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('--enable-preview')
}

tasks.named('run', JavaExec) {
    // IMPORTANT: set esplicito (non "append") così non viene sovrascritto/mescolato
    jvmArgs = [
            '--enable-preview',
            '-Xms8g',
            '-Xmx16g',
            '-XX:+UseZGC',
            '-XX:SoftMaxHeapSize=2g'
    ]
}

test {
    useJUnitPlatform()
    jvmArgs('--enable-preview')
}
